--- a/PyRamen/main_ramen.ipynb
+++ b/PyRamen/main_ramen.ipynb
@@ -6,6 +6,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import csv\n",
+    "\n",
+    "csvmenupath = Path('PyRamen_menu_data.csv')\n",
+    "\n",
+    "menu_data = []\n",
+    "\n",
+    "with open(csvmenupath,'r') as csvmenufile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
