added header with title and my name

--- a/PyRamen/main_ramen.ipynb
+++ b/PyRamen/main_ramen.ipynb
@@ -9,33 +9,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "### from pathlib import Path\n",
     "import csv\n",
     "\n",
-    "csvmenupath = Path('PyRamen_menu_data.csv')\n",
+    "csv_menu_path = Path('PyRamen_menu_data.csv')\n",
     "\n",
-    "menu_data = []\n",
+    "menu = []\n",
     "\n",
-    "with open(csvmenupath,'r') as csvmenufile:"
+    "with open(csv_menu_path,'r') as csv_menu_file:\n",
+    "    csv_menu_reader = csv.reader(csv_menu_file, delimiter = ',')\n",
+    "\n",
+    "    csv_menu_header = next(csv_menu_reader)\n",
+    "    \n",
+    "    for row in csv_menu_reader:\n",
+    "        menu.append(row)\n",
+    "\n",
+    "csv_sales_path = Path('PyRamen_sales_data.csv')\n",
+    "\n",
+    "sales = []\n",
+    "\n",
+    "with open(csv_sales_path, 'r') as csv_sales_file:\n",
+    "    csv_sales_reader = csv.reader(csv_sales_file, delimiter = ',')\n",
+    "    \n",
+    "    csv_sales_header = next(csv_sales_reader)\n",
+    "    \n",
+    "    for row in csv_sales_reader:\n",
+    "        sales.append(row)\n",
+    "        \n",
+    "    for row in sales:\n",
+    "        sales[3] = \"Quantity\"\n",
+    "        sales[4] = \"Menu_Item\"\n",
+    "        \n",
+    "report = {}\n",
+    "\n",
+    "report['01-count'] = 0\n",
+    "report['02-revenue']= 0\n",
+    "report['03-cogs'] = 0\n",
+    "report['04-profit'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'01-count': 0, '02-revenue': 0, '03-cogs': 0, '04-profit': 0}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report"
+   ]
   },
   {
    "cell_type": "code",
